2003-03-28  Jonathan Graehl  <graehl@isi.edu>

	* src/strhash.h: fixed STRINGPOOL, added named_states flag
	(stateName not thread-safe if unnamed states)

2003-03-27  Jonathan Graehl  <graehl@isi.edu>

	* src/finite.cc: ownalphabet in compose chain - copies (rather
	than transfers) alphabet ... performance ...  unify code for -l
	and -r (loops have start, end, direction +1 or -1; or, reverse
	list and use same loop (but switch order of arguments if you do))
	-q = quiet (added some default logging)

2002-12-17  Jonathan Graehl  <graehl@isi.edu>

	* src/wfstio.cc: ignore/strip CR char (so unix carmel can process
	DOS-text output); added graphvis 8.5x11 landscape formatting

2002-12-16  Jonathan Graehl  <graehl@isi.edu>

	* src/wfstio.cc: implemented -Y (GraphViz)

	* src/2hash.h: moved static pool allocator stuff into #ifdef
	CUSTOMNEW and tested with/without it defined

	* src/finite.cc: added -Y option for output of GraphViz .dot files

2002-12-13  Jonathan Graehl  <graehl@isi.edu>

	removed leftover node.h (old homegrown list) from CVS

	* src/slist.h: (and many other files) - when USE_SLIST defined in
	config.h, use a singly linked list (memory efficient) in all
	cases.  required some serious rework, but I was using a singly
	linked list until Yaser tore it out in favor of STL list.  my
	slist is largely STL compatible (not everything implemented) with
	the addition of two types of iterators - one that uses an extra
	level of indirection to allow insertion, and another that uses a
	plain pointer for more efficiently examining values

2002-12-10  Jonathan Graehl  <graehl@isi.edu>

	* src/wfstio.cc: allow zero-weight arcs on input - useful with -U prior counts

	* src/train.cc: changed trainBegin to take parameters for -f and
	-U.  new prior_counts attribute for each arc in training (Dirichlet prior)

	* src/finite.cc: added -U option: initial weights as prior counts for training

2002-11-22  Jonathan Graehl  <graehl@isi.edu>
